--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -471,4 +471,6 @@ source "drivers/misc/cardreader/Kconfig"
 source "drivers/misc/habanalabs/Kconfig"
 source "drivers/misc/uacce/Kconfig"
 source "drivers/misc/pvpanic/Kconfig"
+
+source "drivers/misc/sunxi-rf/Kconfig"
 endmenu
